# esda-web-mapping-boilerplate

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  project-specs-seed.md
backend/: .flake8  pyproject.toml  requirements.txt  setup.cfg
backend/app/: main.py
backend/app/api/v1/: analysis.py  auth.py  base.py  endpoints_maps.py  endpoints_ogc.py  io.py  spatial.py  statistics.py  transformation.py  validation.py  visualization.py
backend/app/auth/: jwt.py
backend/app/core/: config.py  environment.py  environment_config.py  exceptions.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: geojson_models.py  ogc_models.py  spatial.py  user.py
backend/app/schemas/: __init__.py  geospatial.py  validation.py
backend/app/services/: ogc_services.py
backend/app/utils/: cache.py  enhanced_logging.py  geospatial.py  logging.py  ogc_xml_formatter.py
backend/config/: development.json  production.json  staging.json  testing.json
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: api-reference.md  api_reference.md  architecture.md  components.md  deployment.md  project-specs-seed.md  setup_guide.md  spatial-analysis.md
scripts/: run_backend.sh  run_frontend.sh  setup_environment.sh
