[metadata]
name = esda-web-mapping-backend
version = 0.1.0
description = ESDA Web Mapping Backend
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.68.0
    uvicorn>=0.15.0
    sqlalchemy>=1.4.0
    geoalchemy2>=0.9.0
    psycopg2-binary>=2.9.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.4
    python-multipart>=0.0.5
    aiofiles>=0.7.0
    shapely>=1.8.0
    pyproj>=3.2.0
    owslib>=0.25.0

[options.extras_require]
dev =
    pytest>=6.2.5
    pytest-cov>=2.12.1
    pytest-asyncio>=0.15.1
    black>=21.7b0
    isort>=5.9.3
    mypy>=0.910
    flake8>=3.9.2
    flake8-docstrings>=1.6.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
asyncio_mode = auto

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100 